<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.TmbActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/tmb_weight"
            style="@style/EditTextForm"
            android:hint="@string/weight"
            android:maxLength="3" />

        <EditText
            android:id="@+id/tmb_height"
            style="@style/EditTextForm"
            android:hint="@string/height"
            android:maxLength="3" />

        <EditText
            android:id="@+id/tmb_age"
            style="@style/EditTextForm"
            android:hint="@string/age"
            android:maxLength="3" />

        <Spinner
            android:id="@+id/spinner_form"
            style="@style/SpinnerForm"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tmb_lifestyle" />

        <Button
            android:id="@+id/tmb_send"
            style="@style/ButtonFormTmb"
            android:text="@string/calc" />

    </LinearLayout>
</ScrollView>